--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:13:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:14:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ body {
 +2 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Joaquin Niemann -3
+-3 (F)</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Rory McIlroy E
+E thru 9</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++3 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -3
@@ -188,20 +204,20 @@ E thru 10</td>
 +1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-7</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Joaquin Niemann -3
--3 (F)</td>
-      <td>Viktor Hovland E
-E thru 9</td>
-      <td>Rory McIlroy E
-E thru 9</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+3 (F)</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
+      <td>Dustin Johnson -4
+-4 thru 11</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +1
++1 thru 9</td>
+      <td class="greyout">Patrick Cantlay +1
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -220,20 +236,20 @@ E thru 9</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-6</td>
-      <td>Dustin Johnson -4
--4 thru 10</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Viktor Hovland E
-E thru 9</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +1
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 thru 14</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Xander Schauffele +1
 +1 thru 9</td>
-      <td class="greyout">Patrick Cantlay +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +1
++1 thru 9</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -268,26 +284,10 @@ E thru 9</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 thru 14</td>
-      <td>Viktor Hovland E
-E thru 9</td>
-      <td>Xander Schauffele +1
-+1 thru 9</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 9</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
--4 thru 10</td>
+-4 thru 11</td>
       <td>Corey Conners -2
 -2 thru 14</td>
       <td>Xander Schauffele(W) +1
@@ -301,13 +301,13 @@ E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Brooks Koepka -2
 -2 thru 9</td>
       <td>Sungjae Im -2
 -2 thru 12</td>
-      <td>Viktor Hovland(W) E
-E thru 9</td>
+      <td>Viktor Hovland(W) -1
+-1 thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +2
@@ -348,6 +348,22 @@ E thru 10</td>
 +2 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">-1</td>
+      <td>Brooks Koepka -2
+-2 thru 9</td>
+      <td>Viktor Hovland(W) -1
+-1 thru 10</td>
+      <td>Jon Rahm E
+E thru 10</td>
+      <td>Collin Morikawa +2
++2 thru 10</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 13</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -2
@@ -362,22 +378,6 @@ E thru 10</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">0</td>
-      <td>Brooks Koepka -2
--2 thru 9</td>
-      <td>Viktor Hovland(W) E
-E thru 9</td>
-      <td>Jon Rahm E
-E thru 10</td>
-      <td>Collin Morikawa +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 13</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
