--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:40:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:41:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka -2
@@ -163,7 +163,7 @@ body {
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td class="greyout leftborder">Viktor Hovland -1
@@ -177,15 +177,15 @@ body {
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners(W) -2
 -2 thru 16</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -209,13 +209,13 @@ E (F)</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout">Patrick Cantlay +1
 +1 thru 12</td>
     </tr>
@@ -243,13 +243,13 @@ E (F)</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -273,7 +273,7 @@ E (F)</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Matthew Fitzpatrick -1
@@ -305,13 +305,13 @@ E (F)</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Webb Simpson -1
 -1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 10</td>
     </tr>
@@ -373,7 +373,7 @@ E (F)</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
       <td class="greyout">Sam Burns +2
@@ -385,7 +385,7 @@ E (F)</td>
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Patrick Cantlay +1
@@ -425,7 +425,7 @@ E (F)</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 E (F)</td>
       <td class="greyout">Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -433,21 +433,21 @@ E (F)</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-7</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Brooks Koepka -2
@@ -455,7 +455,7 @@ E (F)</td>
       <td>Rory McIlroy E
 E thru 10</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -473,7 +473,7 @@ E (F)</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
       <td class="greyout">Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -481,7 +481,7 @@ E (F)</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Xander Schauffele +1
@@ -497,7 +497,7 @@ E (F)</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Patrick Cantlay +1
@@ -517,7 +517,7 @@ E (F)</td>
       <td>Tiger Woods -1
 -1 (F)</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
       <td class="greyout">Sam Burns +2
@@ -527,7 +527,7 @@ E (F)</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-6</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Viktor Hovland -1
@@ -550,8 +550,8 @@ E thru 10</td>
 -1 thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -567,7 +567,7 @@ E thru 10</td>
       <td>Rory McIlroy E
 E thru 10</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 10</td>
     </tr>
@@ -582,8 +582,8 @@ E thru 10</td>
 -2 thru 10</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -612,12 +612,12 @@ E thru 10</td>
 -2 thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -629,11 +629,11 @@ E thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -647,7 +647,7 @@ E thru 10</td>
       <td>Patrick Cantlay(W) +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout">Sam Burns +2
 +2 thru 12</td>
     </tr>
@@ -655,7 +655,7 @@ E thru 10</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-5</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Tiger Woods(W) -1
 -1 (F)</td>
       <td>Viktor Hovland -1
@@ -681,7 +681,7 @@ E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout">Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -703,15 +703,15 @@ E (F)</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">-5</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -726,8 +726,8 @@ E (F)</td>
 -1 thru 10</td>
       <td>Shane Lowry +1
 +1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
@@ -775,9 +775,9 @@ E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -789,11 +789,11 @@ E thru 10</td>
       <td>Rory McIlroy E
 E thru 10</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Bubba Watson +1
++1 thru 12</td>
+      <td class="greyout leftborder">Bubba Watson +1
 +1 thru 14</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -822,8 +822,8 @@ E thru 10</td>
 +1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -834,12 +834,12 @@ E thru 10</td>
 -3 (F)</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
++2 thru 11</td>
       <td class="greyout">Sam Burns +2
 +2 thru 12</td>
     </tr>
@@ -847,7 +847,7 @@ E thru 10</td>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">-2</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Viktor Hovland(W) -1
 -1 thru 10</td>
       <td>Patrick Cantlay +1
@@ -855,25 +855,9 @@ E thru 10</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout">Xander Schauffele +1
 +1 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">-2</td>
-      <td>Will Zalatoris -3
--3 thru 11</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Jon Rahm +1
-+1 thru 11</td>
-      <td>Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Sam Burns +2
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -887,9 +871,9 @@ E thru 17</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -899,7 +883,7 @@ E thru 17</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
@@ -915,11 +899,27 @@ E thru 17</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
+      <td class="greyout">Justin Thomas(W) +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">-1</td>
+      <td>Will Zalatoris -3
+-3 thru 12</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td>Sam Burns +2
++2 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
     </tr>
@@ -933,11 +933,11 @@ E thru 17</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Patrick Reed +2
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Reed +2
 +2 thru 15</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -981,7 +981,7 @@ E thru 10</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -995,11 +995,11 @@ E thru 10</td>
       <td>Hideki Matsuyama E
 E (F)</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1011,11 +1011,11 @@ E (F)</td>
       <td>Rory McIlroy E
 E thru 10</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -1029,7 +1029,7 @@ E thru 10</td>
       <td>Patrick Cantlay(W) +1
 +1 thru 12</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +1
 +1 thru 10</td>
       <td class="greyout">Justin Thomas +4
@@ -1046,25 +1046,9 @@ E thru 10</td>
 +1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">2</td>
-      <td>Viktor Hovland -1
--1 thru 10</td>
-      <td>Jon Rahm +1
-+1 thru 11</td>
-      <td>Xander Schauffele +1
-+1 thru 10</td>
-      <td>Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -1077,11 +1061,27 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
++1 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">3</td>
+      <td>Viktor Hovland -1
+-1 thru 10</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td>Xander Schauffele +1
++1 thru 10</td>
+      <td>Jordan Spieth +2
++2 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen +4
++4 (F)</td>
     </tr>
   </tbody>
 </table>
