--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:40:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:41:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Cameron Smith -4
 -4 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Matthew Fitzpatrick -1
@@ -166,10 +166,10 @@ body {
 -2 thru 16</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Sam Burns +2
+      <td class="greyout leftborder">Sam Burns +2
 +2 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -193,21 +193,21 @@ E thru 10</td>
       <td>Scottie Scheffler(W) -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Shane Lowry +1
++1 thru 12</td>
+      <td class="greyout leftborder">Shane Lowry +1
 +1 (F)</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-7</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Brooks Koepka -2
 -2 thru 10</td>
       <td>Tony Finau -1
@@ -241,7 +241,7 @@ E thru 10</td>
       <td>Scottie Scheffler -3
 -3 (F)</td>
       <td>Will Zalatoris -3
--3 thru 11</td>
+-3 thru 12</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Patrick Cantlay +1
@@ -260,12 +260,12 @@ E thru 10</td>
 -2 thru 10</td>
       <td>Viktor Hovland -1
 -1 thru 10</td>
-      <td>Jordan Spieth(W) +1
-+1 thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
+      <td>Patrick Cantlay +1
 +1 thru 12</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -278,8 +278,8 @@ E thru 10</td>
 -1 thru 10</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -327,9 +327,9 @@ E thru 17</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +1
-+1 thru 11</td>
-      <td class="greyout">Jordan Spieth +1
-+1 thru 10</td>
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -339,7 +339,7 @@ E thru 17</td>
       <td>Viktor Hovland(W) -1
 -1 thru 10</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
       <td class="greyout leftborder">Patrick Reed +2
@@ -355,13 +355,13 @@ E thru 17</td>
       <td>Tony Finau -1
 -1 (F)</td>
       <td>Jon Rahm(W) +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Collin Morikawa +1
 +1 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +1
-+1 thru 10</td>
-      <td class="greyout">Patrick Cantlay +1
+      <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -369,7 +369,7 @@ E thru 17</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Patrick Cantlay +1
 +1 thru 12</td>
       <td>Tyrrell Hatton +1
@@ -381,15 +381,15 @@ E thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -2
 -2 thru 16</td>
       <td>Jon Rahm +1
-+1 thru 11</td>
++1 thru 12</td>
       <td>Xander Schauffele +1
 +1 thru 10</td>
-      <td>Jordan Spieth +1
-+1 thru 10</td>
+      <td>Jordan Spieth +2
++2 thru 11</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
