--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:46:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:47:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -524,22 +524,6 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -3
--3 (F)</td>
-      <td>Corey Conners -2
--2 thru 16</td>
-      <td>Robert MacIntyre E
-E thru 17</td>
-      <td>Rory McIlroy E
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Jon Rahm +1
-+1 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
@@ -634,6 +618,22 @@ E thru 10</td>
 +2 thru 11</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler(W) -3
+-3 (F)</td>
+      <td>Corey Conners -2
+-2 thru 16</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
++1 (F)</td>
+      <td class="greyout">Jon Rahm +1
++1 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -812,22 +812,6 @@ E thru 10</td>
 +2 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -2
--2 thru 16</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Robert MacIntyre E
-E thru 17</td>
-      <td>Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Benjac</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -4
@@ -874,6 +858,22 @@ E thru 10</td>
 +1 thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners(W) -2
+-2 thru 16</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Robert MacIntyre +1
++1 (F)</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
