--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:46:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:47:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -316,22 +316,6 @@ E thru 10</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners(W) -2
--2 thru 16</td>
-      <td>Daniel Berger -1
--1 (F)</td>
-      <td>Robert MacIntyre E
-E thru 17</td>
-      <td>Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth +2
-+2 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-1</td>
       <td>Brooks Koepka -2
@@ -344,6 +328,22 @@ E thru 17</td>
 +1 thru 12</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +1 thru 12</td>
+      <td class="greyout">Jordan Spieth +2
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners(W) -2
+-2 thru 16</td>
+      <td>Daniel Berger -1
+-1 (F)</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout leftborder">Robert MacIntyre +1
++1 (F)</td>
       <td class="greyout">Jordan Spieth +2
 +2 thru 11</td>
     </tr>
