--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:49:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 5:49:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -204,6 +204,22 @@ body {
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -4
+-4 (F)</td>
+      <td>Joaquin Niemann -3
+-3 (F)</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Rory McIlroy E
+E thru 10</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
++3 (F)</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -220,18 +236,18 @@ body {
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -4
--4 (F)</td>
-      <td>Joaquin Niemann -3
--3 (F)</td>
-      <td>Rory McIlroy E
-E thru 10</td>
-      <td>Viktor Hovland +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +3
-+3 (F)</td>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-5</td>
+      <td>Sungjae Im -4
+-4 thru 14</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Cantlay +1
++1 thru 12</td>
       <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
@@ -252,6 +268,38 @@ E thru 10</td>
 +1 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-5</td>
+      <td>Dustin Johnson -4
+-4 thru 12</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Patrick Cantlay +1
++1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +1
++1 thru 12</td>
+      <td class="greyout">Jordan Spieth(W) +2
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+-4 (F)</td>
+      <td>Corey Conners -2
+-2 thru 16</td>
+      <td>Viktor Hovland E
+E thru 12</td>
+      <td>Xander Schauffele +1
++1 thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +2
++2 thru 11</td>
+      <td class="greyout">Justin Thomas +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-4</td>
       <td>Dustin Johnson -4
@@ -265,54 +313,6 @@ E thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Sungjae Im -4
--4 thru 14</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 11</td>
-      <td>Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Cantlay +1
-+1 thru 12</td>
-      <td class="greyout">Justin Thomas +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-4</td>
-      <td>Dustin Johnson -4
--4 thru 12</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Patrick Cantlay +1
-+1 thru 12</td>
-      <td>Viktor Hovland +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm +1
-+1 thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +2
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
--4 (F)</td>
-      <td>Corey Conners -2
--2 thru 16</td>
-      <td>Viktor Hovland +1
-+1 thru 11</td>
-      <td>Xander Schauffele +1
-+1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-+2 thru 11</td>
-      <td class="greyout">Justin Thomas +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -348,6 +348,22 @@ E thru 10</td>
 +2 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">0</td>
+      <td>Brooks Koepka -2
+-2 thru 10</td>
+      <td>Viktor Hovland(W) E
+E thru 12</td>
+      <td>Jon Rahm +1
++1 thru 12</td>
+      <td>Collin Morikawa +1
++1 thru 12</td>
+      <td class="greyout leftborder">Patrick Reed +2
++2 thru 15</td>
+      <td class="greyout">Luke List +5
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -2
@@ -362,22 +378,6 @@ E thru 10</td>
 +1 (F)</td>
       <td class="greyout">Justin Thomas(W) +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">1</td>
-      <td>Brooks Koepka -2
--2 thru 10</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 11</td>
-      <td>Jon Rahm +1
-+1 thru 12</td>
-      <td>Collin Morikawa +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Patrick Reed +2
-+2 thru 15</td>
-      <td class="greyout">Luke List +5
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
